tmpl/kubernetes/apps/namespace/external_service/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external_service
  namespace: external-services
subsets:
  - addresses:
      - ip: service_ip
    ports:
      - name: http
        port: service_port
        protocol: TCP
