tmpl/kubernetes/apps/namespace/external_service/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external_service
  namespace: external-services
spec:
  # selector:
  #   app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      # protocol: HTTP
      port: service_port
      # targetPort:
  type: ClusterIP
