tmpl/kubernetes/apps/namespace/external_service/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external_service
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.external_service
      hosts:
        - "service_subdomain.${SECRET_DOMAIN}"

  rules:
    - host: service_subdomain.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external_service
                port:
                  name: http
